--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
+    "react-fancybox": "^0.2.5",
+    "react-image-gallery": "^1.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
@@ -43,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "fancybox": "^3.0.1",
     "node-sass": "^5.0.0",
     "sass-loader": "^11.0.1"
   }
