fix: add hashroutert

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://alinagaripova.github.io/travel-app",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
@@ -9,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.1",
     "bootstrap": "^4.6.0",
+    "gh-pages": "^3.1.0",
     "leaflet": "^1.7.1",
     "material-ui": "^0.20.2",
     "moment": "^2.29.1",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
