--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "travel-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://alinagaripova.github.io/travel-app",
+  "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/lab": "^4.0.0-alpha.57",
